src/main/kotlin/com/example/ohsiria/global/config/error/exception/ExpiredTokenException.kt
package com.example.ohsiria.global.config.error.exception

import com.example.ohsiria.global.config.error.data.ErrorCode

object ExpiredTokenException: BusinessException(ErrorCode.EXPIRED_TOKEN)
